<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_to_do"
            android:title="@string/to_do"
            android:icon="@drawable/ic_done_black_24dp"/>

        <item android:id="@+id/nav_habit"
            android:title="@string/habit"
            android:icon="@drawable/ic_fitness_center_black_24dp"/>

        <item android:id="@+id/nav_quote"
            android:title="Daily Quotes"
            android:icon="@drawable/ic_favorite_24dp"/>

    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_like"
                android:title="@string/like"
                android:icon="@drawable/ic_thumb_up_24dp"/>

            <item android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"/>
        </menu>
    </item>

</menu>