<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_bg"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_text"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/password_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />

        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/confirm_hint"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/reg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/reg_account"
            android:background="@color/colorWhite"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorIndigo"
            android:textStyle="bold" />



    </LinearLayout>

</LinearLayout>