<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_bg"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/login_text"
            android:background="@color/colorWhite"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorIndigo"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textSize="18sp"

            android:text="@string/create_account"
            android:padding="5dp"/>

        <Button
            android:id="@+id/nav_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/nav_text"
            android:background="@color/colorWhite"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorIndigo"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>