<?xml version="1.0" encoding="utf-8"?>
<!-- This popup shows the things that we want the users to add to the database -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/to_do_item"
                android:hint="@string/title_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/desc_item"
                android:hint="@string/hint_desc"
                android:layout_below="@+id/to_do_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/priority_item"
                android:hint="@string/hint_priority"

                android:inputType="number"

                android:layout_below="@+id/desc_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/save_button"
                android:layout_below="@+id/priority_item"
                android:text="@string/save_button"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLightBlue"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>