<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        app:cardCornerRadius="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/item_name"
                android:text="@string/item_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/item_description"
                android:layout_below="@id/item_name"
                android:text="@string/hint_desc"
                android:textSize="15sp"
                android:paddingTop="4dp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/item_priority"
                android:text="@string/hint_priority"
                android:layout_below="@id/item_description"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/item_date"
                android:text="@string/date"
                android:layout_below="@id/item_priority"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TableRow
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/item_date">

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_menu_edit"/>

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@android:drawable/ic_delete"/>

            </TableRow>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>