<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        app:cardCornerRadius="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/create_habit"
                android:text="@string/create_habit"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/habit_frequency"
                android:layout_below="@id/create_habit"
                android:text="@string/hint_goal"
                android:textSize="15sp"
                android:paddingTop="4dp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/habit_date"
                android:text="@string/date"
                android:layout_below="@id/habit_frequency"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/habit_date"
                android:paddingTop="4dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:indeterminate="false" />

            <TableRow
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/habit_date">

                <Button
                    android:id="@+id/edit_Habit_Button"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_menu_edit"/>

                <Button
                    android:id="@+id/delete_Habit_Button"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@android:drawable/ic_delete"/>

            </TableRow>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>